# iroko

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  2023-11-22-12-27-06.json  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  INSTALL.rst  INSTALL_Ansible_lxd.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  Revista.txt  TODO.md  babel.ini  docker-compose.full.yml  docker-compose.yml  docker-services.yml  exec.py  exec1.py  package-lock.json  pipenv_graph  pyproject.toml  pytest.ini  rec.json  requirements-dev.txt  requirements.txt  requirements36.txt  requirements_zen.txt  run  run-tests.sh  server-local  setup.cfg  setup.py
.tx/: config
ansible/lxd/: new-bionic.sh
ansible/playbooks/: ansible.cfg  common.yml  dependencies.retry  dependencies.yml  sceiba.yml
ansible/playbooks/inventories/: development
data/: ~$oaisources.xlsx
data/eduardo/: issn.cuba.json  issn.info.cuba.json
data/texts/: inclusions.json  rejected_inclusions.json  static_pages.json
data/texts/en/: css.css  faq.json  faqs.md  inclusion_requeriments.json  terminos.md  texts.json
data/texts/es/: faq.json  faqs.md  inclusion_requeriments.json  politicas.md  texts.json
docker/: build-images.sh  wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  harvester.rst  index.rst  installation.rst  make.bat  rules.rst  run-celery  run-server  server-local  usage.rst
invenio_userprofiles-1.0.1.dist-info/: METADATA  RECORD  entry_points.txt  entry_pointss.txt  top_level.txt
iroko/: __init__.py  api.py  cli.py  config.py  decorators.py  deployment_sample.py  dev_ips.py  ext.py  rest.py  utils.py  version.py  views.py
iroko-datamodel/: .editorconfig  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  pytest.ini  run-tests.sh  setup.cfg  setup.py
iroko-datamodel/docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
iroko-datamodel/iroko_datamodel/: __init__.py  config.py  ext.py  version.py  views.py
iroko-datamodel/iroko_datamodel/jsonschemas/: __init__.py
iroko-datamodel/iroko_datamodel/loaders/: __init__.py
iroko-datamodel/iroko_datamodel/mappings/: __init__.py
iroko-datamodel/iroko_datamodel/marshmallow/: __init__.py  json.py
iroko-datamodel/iroko_datamodel/serializers/: __init__.py
iroko-datamodel/tests/: conftest.py  test_version.py
iroko/auth/: __init__.py  internal_apps.py  sceiba_openid.py
iroko/curator/: __init__.py  api.py  ext.py  forms.py  permissions.py  version.py  views.py
iroko/curator/templates/: add_source.html  add_term.html  add_vocabulary.html  edit_source.html  edit_term.html  edit_vocabulary.html  error.html  harvest_task.html  list-sources.html  source.html  task_progress.html
iroko/docs/: views.py
iroko/evaluations/: __init__.py  admin.py  api.py  evaluation.py  marshmallow.py  models.py  permissions.py  rest.py  rules.py
iroko/fixtures/: __init__.py  cli.py  ext.py  issn.py  miar.py  organizations.py  permissions.py  sources.py  taxonomy.py
iroko/graph/: __init__.py  api.py  marshmallow.py  models.py  rest.py
iroko/graph/mapping_to_rdf/: __init__.py  configuration_manager.py  controllers.py  create_graph.py  mapping_to_rdf.py  rest.py
iroko/harvester/: __init__.py  admin.py  api.py  base.py  cli.py  decorators.py  errors.py  ext.py  journals.py  marshmallow.py  models.py  permissions.py  receivers.py  rest.py  signals.py  tasks.py  utils.py  views.py
iroko/harvester/fulltext/: dspace.py  (+2 more)
iroko/iroko_theme/: __init__.py  bundles.py  config.py  ext.py  forms.py  version.py  views.py  webpack.py
iroko/iroko_theme_old/: __init__.py  bundles.py  config.py  ext.py  forms.py  version.py  views.py  webpack.py
iroko/iroko_userprofiles/: __init__.py  admin.py  api.py  ext.py  forms.py  models.py  views.py
iroko/issn/: __init__.py  api.py  rest.py
iroko/modules/: __init__.py
iroko/notifications/: __init__.py  admin.py  api.py  marshmallow.py  models.py  permissions.py  rest.py
iroko/organizations/: README.md  api.py  cli.py  ext.py  indexer.py  permissions.py  rest.py  search.py  tasks.py  views.py
iroko/pages/: __init__.py  admin.py  models.py
iroko/patents/: __init__.py  api.py  cli.py  ext.py  permissions.py  rest.py  search.py
iroko/persons/: __init__.py  api.py  cli.py  ext.py  fixtures.py  permissions.py  rest.py  search.py  utils.py  version.py
iroko/pidstore/: __init__.py  fetchers.py  minters.py  pids.py  providers.py
iroko/projects/: __init__.py  api.py  cli.py  ext.py  permissions.py  rest.py  search.py
iroko/proyects/: __init__.py  permissions.py
iroko/records/: __init__.py  api.py  cli.py  config.py  ext.py  permissions.py  rest.py  search.py  views.py  webpack.py
iroko/sources/: __init__.py  admin.py  api.py  cli.py  ext.py  fixtures.py  forms.py  jsonresolvers.py  marshmallow.py  models.py  permissions.py  rest.py  rest_dep.py  search.py  utils.py  views.py
iroko/taxonomy/: __init__.py  admin.py  api.py  marshmallow.py  models.py  permissions.py  rest.py  views.py
iroko/texts/: __init__.py  api.py  ext.py  forms.py  version.py  views.py
iroko/theme/: __init__.py  views.py  webpack.py
iroko/translations/: README  messages.pot
iroko/userprofiles/: __init__.py  admin.py  api.py  config.py  ext.py  forms.py  marshmallow.py  models.py  rest.py  validators.py  version.py  views.py
iroko/vocabularies/: __init__.py  admin.py  api.py  cli.py  ext.py  fixtures.py  marshmallow.py  models.py  permissions.py  rest.py
scripts/: server-harvester
tests/: conftest.py  test_version.py
tests/api/: conftest.py  test_api_record_files.py  test_api_simple_flow.py
tests/e2e/: conftest.py  test_front_page.py
tests/ui/: conftest.py  test_views.py
(+499 files in other folders)
